welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^SnakeBuggle:8: warning: enclosing method finale has result type Unit: return value discarded
        return true
        ^SnakeBuggle:11: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return false
               ^SnakeBuggle:11: warning: enclosing method finale has result type Unit: return value discarded
        return false
        ^SnakeBuggle:17: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^SnakeBuggle:17: warning: enclosing method finale has result type Unit: return value discarded
        return true
        ^SnakeBuggle:20: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return false
               ^SnakeBuggle:20: warning: enclosing method finale has result type Unit: return value discarded
        return false
        ^SnakeBuggle:46: error: value unary_! is not a member of Unit
  while (!finale()){
         ^